# DS-geometric-shepherding-rl

./: .gitignore  README.md  evaluate.py  pyproject.toml  requirements.txt  train.py
configs/: default.yaml
envs/: __init__.py  herding_env.py
scripts/: evaluate.py  evaluate_v2.py  train.py  train_v2.py
src/shepherding/: __init__.py
src/shepherding/envs/: __init__.py  herding_env.py
src/shepherding/utils/: geometry.py
utils/: __init__.py
